<resources>
    <string name="app_name">Job Search</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="position_add">Add Job Contacts and Details</string>
    <string name="position_save">Save Position Details</string>
    <string name="new_position">New Position</string>
    <string name="title">Title</string>
    <string name="company">Company</string>
</resources>
